change: adjust other classes and folders
changed the code using other directories to use the Configuration class
moved the test files to fit the new folder structure