@@ -10,6 +10,8 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import javax.crypto.SecretKey;
+
+import frame.Configuration;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
@@ -23,7 +25,7 @@ import messengerSystem.SHA256withRSAAuthentication;
 
 public class ExternalAPITests {
 
-	private Path currentWorkingDir = Paths.get("").toAbsolutePath();
+	private Path currentWorkingDir = Path.of(Configuration.getBaseDirPath());
 	private Path externalPath = currentWorkingDir.resolve("externalAPI");
 	
 	private final static byte[] key = new byte[] { (byte) 1, (byte) 2, (byte) 3, (byte) 4, (byte) 5, (byte) 6, (byte) 7, (byte) 8, (byte) 9, (byte) 10, (byte) 11, (byte) 12, (byte) 13, (byte) 14, (byte) 15, (byte) 16, (byte) 17, (byte) 18, (byte) 19, (byte) 20, (byte) 21, (byte) 22, (byte) 23, (byte) 24, (byte) 25, (byte) 26, (byte) 27, (byte) 28, (byte) 29, (byte) 30, (byte) 31, (byte) 32};
